# Rdsdp

./: DESCRIPTION  MD5  NAMESPACE  cleanup  configure  configure.ac
R/: Rdsdp.R
man/: Rdsdp.Rd  dsdp-readsdpa.Rd  dsdp.Rd
src/: Makevars.in  Makevars.win  Rdsdp.c  Rreadsdpa.c
src/dsdp/: Makefile  make.include
src/dsdp/include/: dsdp5.h  dsdp_io.h  dsdpmem.h  dsdpsys.h
src/dsdp/lib/: Makefile
src/dsdp/src/bounds/: allbounds.c  dbounds.c
src/dsdp/src/lp/: dsdplp.c
src/dsdp/src/sdp/: dsdpadddata.c  dsdpblock.c  dsdpdatamat.c  dsdpdsmat.c  dsdpstep.c  dsdpxmat.c  sdpconevec.c  sdpsss.c
src/dsdp/src/solver/: dsdpcops.c  dsdpobjcone.c  dsdpprintout.c  dsdprescone.c  dsdpsetoptions.c  dsdpsetup.c  dsdpvec.h  dualalg.c
src/dsdp/src/sys/: dsdperror.c  dsdploginfo.c
src/dsdp/src/vecmat/: cholmat.c  diag.c  dlpack.c  drowcol.c  dufull.c  identity.c  numchol.h  onemat.c  rmmat.c  sdpalloc.c  sdpexit.c  sdpmatx.c  sdpnfac.c  sdporder.c  sdpsymb.c  sdpvec.c  spds.c  vech.c  vechu.c  zeromat.c
tests/: test1.R  test2.R  test3.R
